crates/unblock-mcp/tests/snapshots/contract_suite__capabilities.snap
---
source: crates/unblock-mcp/tests/contract_suite.rs
expression: capabilities()
---
{
  "contract_version": "unblock.mcp.v1.10",
  "tools": [
    {
      "name": "issue",
      "description": "Create, show, update, close, reopen, delete, or restore issues. Where an action accepts the optional agent_name, harness and model fields, unblock currently discards them."
    },
    {
      "name": "claim",
      "description": "Atomically claim an issue for an assignee; the loser of a race is reported. Where an action accepts the optional agent_name, harness and model fields, unblock currently discards them."
    },
    {
      "name": "defer",
      "description": "Defer an issue until a future timestamp, or undefer it. Where an action accepts the optional agent_name, harness and model fields, unblock currently discards them."
    },
    {
      "name": "query",
      "description": "Query issues: list, ready, blocked, search, count, or stale."
    },
    {
      "name": "dep",
      "description": "Manage and query dependencies: add, remove, list, tree, cycles, or graph. Where an action accepts the optional agent_name, harness and model fields, unblock currently discards them."
    },
    {
      "name": "sync",
      "description": "Export/import the issue store as JSONL, or one-shot import a bd export."
    },
    {
      "name": "diagnostics",
      "description": "Diagnostics: stats, info, where, version, lint, changelog, orphans, or dangling."
    },
    {
      "name": "comment",
      "description": "Comment on issues: add, list, update, or delete (soft-redact). Where an action accepts the optional agent_name, harness and model fields, unblock currently discards them."
    }
  ],
  "resources": [
    {
      "uri": "unblock://issues/{id}",
      "description": "A single issue by id."
    },
    {
      "uri": "unblock://issues/ready",
      "description": "The default-complete ready set (agent entrypoint)."
    },
    {
      "uri": "unblock://issues/blocked",
      "description": "The blocked set."
    },
    {
      "uri": "unblock://capabilities",
      "description": "This discovery document."
    },
    {
      "uri": "unblock://schema",
      "description": "The JsonSchema bundle for every tool I/O."
    }
  ],
  "prompts": [
    {
      "name": "triage",
      "description": "A guided triage workflow over blocked/unassigned/deferred work."
    },
    {
      "name": "plan_next_work",
      "description": "Drive the ready -> claim selection (FR-20)."
    },
    {
      "name": "close_with_suggestions",
      "description": "Close an issue and surface the newly-unblocked set (FR-11)."
    }
  ],
  "error_codes": [
    {
      "code": "DATABASE_NOT_FOUND",
      "exit_code": 2,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "DATABASE_LOCKED",
      "exit_code": 2,
      "retryable": true,
      "hint_shape": "none"
    },
    {
      "code": "SCHEMA_MISMATCH",
      "exit_code": 2,
      "retryable": false,
      "hint_shape": "contextual_text"
    },
    {
      "code": "DATABASE_ERROR",
      "exit_code": 2,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "NOT_INITIALIZED",
      "exit_code": 2,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "ALREADY_INITIALIZED",
      "exit_code": 2,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "RATE_LIMITED",
      "exit_code": 2,
      "retryable": true,
      "hint_shape": "none"
    },
    {
      "code": "ISSUE_NOT_FOUND",
      "exit_code": 3,
      "retryable": false,
      "hint_shape": "similar_ids"
    },
    {
      "code": "AMBIGUOUS_ID",
      "exit_code": 3,
      "retryable": true,
      "hint_shape": "none"
    },
    {
      "code": "ID_COLLISION",
      "exit_code": 3,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "INVALID_ID",
      "exit_code": 3,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "NOTHING_TO_DO",
      "exit_code": 3,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "ALREADY_CLAIMED",
      "exit_code": 3,
      "retryable": true,
      "hint_shape": "none"
    },
    {
      "code": "VALIDATION_FAILED",
      "exit_code": 4,
      "retryable": true,
      "hint_shape": "contextual_text"
    },
    {
      "code": "INVALID_STATUS",
      "exit_code": 4,
      "retryable": true,
      "hint_shape": "static_text"
    },
    {
      "code": "INVALID_TYPE",
      "exit_code": 4,
      "retryable": true,
      "hint_shape": "static_text"
    },
    {
      "code": "INVALID_PRIORITY",
      "exit_code": 4,
      "retryable": true,
      "hint_shape": "static_text"
    },
    {
      "code": "REQUIRED_FIELD",
      "exit_code": 4,
      "retryable": true,
      "hint_shape": "none"
    },
    {
      "code": "POLICY_VIOLATION",
      "exit_code": 4,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "CYCLE_DETECTED",
      "exit_code": 5,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "DEPENDENCY_NOT_FOUND",
      "exit_code": 5,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "HAS_DEPENDENTS",
      "exit_code": 5,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "SELF_DEPENDENCY",
      "exit_code": 5,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "DUPLICATE_DEPENDENCY",
      "exit_code": 5,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "JSONL_PARSE_ERROR",
      "exit_code": 6,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "PREFIX_MISMATCH",
      "exit_code": 6,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "IMPORT_COLLISION",
      "exit_code": 6,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "SYNC_CONFLICT",
      "exit_code": 6,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "CONFLICT_MARKERS",
      "exit_code": 6,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "PATH_TRAVERSAL",
      "exit_code": 6,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "CONFIG_ERROR",
      "exit_code": 7,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "CONFIG_NOT_FOUND",
      "exit_code": 7,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "CONFIG_PARSE_ERROR",
      "exit_code": 7,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "IO_ERROR",
      "exit_code": 8,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "JSON_ERROR",
      "exit_code": 8,
      "retryable": false,
      "hint_shape": "none"
    },
    {
      "code": "INTERNAL_ERROR",
      "exit_code": 1,
      "retryable": false,
      "hint_shape": "none"
    }
  ]
}
