crates/unblock-mcp/tests/snapshots/contract_suite__prompt_triage.snap
---
source: crates/unblock-mcp/tests/contract_suite.rs
expression: result.messages
---
[
  {
    "role": "user",
    "content": {
      "type": "text",
      "text": "Triage the workspace. Steps:\n1. Call `query` with `{\"kind\":\"blocked\"}` to find blocked issues, and `dep` with `{\"action\":\"cycles\"}` to surface any dependency cycles.\n2. Call `query` with `{\"kind\":\"list\",\"assignee\":null}` to find unassigned work, and `{\"kind\":\"stale\"}` for stale issues.\n3. For each blocked issue, inspect its `dep` `tree` and propose the next unblocking action.\n4. Summarise: what is blocked, what is unassigned, and the highest-leverage next step."
    }
  }
]
